updating .logo images

--- a/style.css
+++ b/style.css
@@ -328,7 +328,7 @@ img{
 .logo-track img {
   height: 60px;
   object-fit: contain;
-  filter: grayscale(100%);
+  filter:invert();
   transition: transform 0.3s ease;
 }
 
